<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="20dp">

    <TextView
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/category_form"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewCate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00F1EBEB"
            android:hint="@string/enter_category_name"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_weight="1"

            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>