<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_status_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_form"
        android:textStyle="bold"
        android:labelFor="@+id/et_status" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        app:errorEnabled="true"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_add_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/button_main"
            android:textColor="@color/black"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_close_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button_main"
            android:textColor="@color/black"
            android:text="@string/close" />
    </RelativeLayout>
</LinearLayout>