<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_priority_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/et_priority"
        android:text="@string/priority_form"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_update_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/button_main"
            android:text="@string/update"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_close_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/button_main"
            android:text="@string/close"
            android:textColor="@color/black" />
    </RelativeLayout>
</LinearLayout>